# Sonara

./: .gitattributes  .gitignore  CONTRIBUTING.md  PRIVACY.md  README-mockup.md  README-options.md  README.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.superpowers/sdd/: final-fix-report.md
commands/: audio-control.md  doctor.md  duck-level.md  echo:doctor.md  echo:repeat.md  echo:status.md  echo:stop.md  echo:verbosity.md  install.md  keymap.md  minqueue.md  rate.md  read.md  settings.md  sonari:doctor.md  sonari:install.md  sonari:keymap.md  sonari:rate.md  sonari:repeat.md  sonari:skip.md  sonari:status.md  sonari:stop.md  sonari:uninstall.md  sonari:verbosity.md  sonari:voice.md  start.md  status.md  summary.md  uninstall.md  verbosity.md  voice.md  voices.md
docs/: phase-2.1-eyes-free-prompts-spec.md  phase1-verification-checklist.md
docs/superpowers/: M2-WINDOWS-ACCEPTANCE.md  M3-WINDOWS-ACCEPTANCE.md  WINDOWS-FRIEND-TEST-ROUND1.md  m2-windows-api-reference.md  phase1-execution-log.md  phase1-review-followups.md  phase2-manual-smoke-checklist.md  phase3-manual-smoke-checklist.md
hooks/: hooks.json  permission-request.sh  post-tool-use.sh  pre-tool-use.sh  stop.sh
hotkeyd/: sonara-hotkeyd.swift  sonari-hotkeyd.swift
src/echo/: __init__.py  assembler.py  cleaner.py  cli.py  client.py  config.py  daemon.py  hooks_entry.py  paths.py  protocol.py  queue.py  sessions.py  speaker.py
src/sonara/: __init__.py  assembler.py  channel.py  chatterbox.py  chatterbox_provision.py  chatterbox_worker.py  cleaner.py  cli.py  client.py  config.py  daemon.py  history.py  hooks_entry.py  keymap.py  kokoro.py  kokoro_provision.py  paths.py  previews.py  protocol.py  queue.py  requirements-chatterbox.txt  requirements-kokoro.txt  router.py  session_prefs.py  sessions.py  settings.html  speaker.py  summarizer.py  (+1 more)
tests/: _fakeplatform.py  _winfakes.py  conftest.py  daemon_helpers.py  test_assembler.py  test_bin_echo.py  test_bin_shims.py  test_bin_sonara.py  test_bin_sonari.py  test_channel.py  test_chatterbox.py  test_chatterbox_cache.py  test_chatterbox_dehum.py  test_chatterbox_handle.py  test_chatterbox_provision.py  test_chatterbox_routing.py  test_chatterbox_worker.py  test_cleaner.py  test_cli_control.py  test_cli_dev_migrate.py  test_cli_doctor.py  test_cli_ducking.py  test_cli_hotkeyd.py  test_cli_install.py  test_cli_launcher.py  test_cli_legacy.py  test_cli_lifecycle.py  test_cli_resolve_python.py  test_cli_settings.py  test_cli_uninstall.py  test_cli_voices.py  test_client_ensure.py  test_client_send.py  test_commands.py  test_config.py  test_daemon_alert_timing.py  test_daemon_audio_mode.py  test_daemon_channels.py  test_daemon_chatterbox_prewarm.py  test_daemon_conn.py  (+99 more)
tools/: clean_voice_clip.py
(+150 files in other folders)
