[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sonari"
version = "0.1.0"
description = "Eyes-free text-to-speech layer for Claude Code (macOS)"
requires-python = ">=3.9"
authors = [{ name = "Nima Hakimi", email = "hakimi.nima1@gmail.com" }]
license = { text = "MIT" }

[project.scripts]
sonari = "sonari.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
