[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sonara"
version = "0.5.0"
description = "Eyes-free text-to-speech layer for Claude Code (Windows)"
requires-python = ">=3.9"
authors = [{ name = "Nima Hakimi", email = "hakimi.nima1@gmail.com" }]
license = { text = "MIT" }

[project.scripts]
sonara = "sonara.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
# Windows TTS runtime. OneCore speech is reached via PyWinRT; without these the
# daemon cannot synthesize and Windows users get silent no-speech (#7).
windows = [
    "winrt-runtime; sys_platform == 'win32'",
    "winrt-Windows.Media.SpeechSynthesis; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams; sys_platform == 'win32'",
    "pycaw; sys_platform == 'win32'",
]
# Kokoro-82M neural voices (optional, cross-platform). One ~310 MB model + a 6 MB
# voices file (auto-downloaded on first use) provide all 28 voices. Imported lazily
# only when a Kokoro voice is selected, so base Sonara runs without these.
kokoro = [
    "kokoro-onnx>=0.3.0",
    "onnxruntime",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sonara = ["platform/windows/earcons/*.wav", "settings.html"]
